Several minor modifications Fixed bug in the onReady handler for HashTransport

--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -14,16 +14,16 @@
         Demos
         <ul>
             <li>
-                <a href="http://consumer.easyxss.net/example/transport.html">Sending plain string messages using the easyXDM.Transport.BestAvailableTransport class</a>
+                <a href="http://consumer.easyxdm.net/example/transport.html">Sending plain string messages using the easyXDM.Transport.BestAvailableTransport class</a>
             </li>
             <li>
-                <a href="http://consumer.easyxss.net/example/data.html">Sending data (objects)  using the easyXDM.Channel class</a>
+                <a href="http://consumer.easyxdm.net/example/data.html">Sending data (objects)  using the easyXDM.Channel class</a>
             </li>
             <li>
-                <a href="http://consumer.easyxss.net/example/methods.html">Exposing and invoking methods using the easyXDM.Interface class</a>
+                <a href="http://consumer.easyxdm.net/example/methods.html">Exposing and invoking methods using the easyXDM.Interface class</a>
             </li>
             <li>
-                <a href="http://consumer.easyxss.net/example/index.html">Bridging two web applications</a>
+                <a href="http://consumer.easyxdm.net/example/index.html">Bridging two web applications</a>
             </li>
         </ul>
 		<br/>
@@ -36,7 +36,7 @@
                 <h3>Additional Resources</h3>
                 <ul>
                     <li>
-                        <a href="http://easyxss.net/" target="_blank">The easyXDM homepage</a>
+                        <a href="http://easyxdm.net/" target="_blank">The easyXDM homepage</a>
                     </li>
                     <li>
                         <a href="http://github.com/oyvindkinsey/easyXDM/tree/master" target="_blank">The git repository</a>
