Added some content to the examples. Fixed an error in the headers and added the license.

--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -23,6 +23,9 @@
                 <a href="http://consumer.easyxdm.net/example/methods.html">Exposing and invoking methods using the easyXDM.Interface class</a>
             </li>
             <li>
+                <a href="http://consumer.easyxdm.net/example/xhr.html">Calling an ajax method from the remote domain</a>
+            </li>
+            <li>
                 <a href="http://consumer.easyxdm.net/example/index.html">Bridging two web applications</a>
             </li>
         </ul>
