Added some files to ant that went missing when messing with git to include the original commit history from SVN.

--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -4,7 +4,7 @@
         </div>
         easyXDM is a javascript library that uses available techniques to provide a means of transporting messages and/or method calls between windows in different domains. 
         <br/>
-        This is perfect if you plan to provide a client-side API on your web site as you can expose a method in as little as 10 lines of code.
+        This is perfect if you plan to provide a client-side API on your web site as you can expose a method in as little as <a href="http://www.codeproject.com/KB/scripting/easyXDM.aspx">7 lines of code</a>.
         <br/>
         <br/>
         In addition, you dont have to provide a full client library to the consumers, you can just tell them the location of your easyXDM-endpoint, 
