Added a link to the widget example

--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -14,6 +14,9 @@
         Demos
         <ul>
             <li>
+                <a href="http://consumer.easyxdm.net/example/widgets.html">Managing easyXDM.Widget's using easyXDM.WidgetManager</a>
+            </li>
+            <li>
                 <a href="http://consumer.easyxdm.net/example/transport.html">Sending plain string messages using the easyXDM.Transport.BestAvailableTransport class</a>
             </li>
             <li>
