Added an example showing how to resize an iframe

--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -14,6 +14,9 @@
         Demos
         <ul>
             <li>
+                <a href="http://consumer.easyxdm.net/example/resize_iframe.html">The essential resize-iframe example</a>
+            </li>
+            <li>
                 <a href="http://consumer.easyxdm.net/example/widgets.html">Managing easyXDM.Widget's using easyXDM.WidgetManager</a>
             </li>
             <li>
