--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -20,7 +20,7 @@
                 <a href="http://consumer.easyxdm.net/example/widgets.html">Managing easyXDM.Widget's using easyXDM.WidgetManager</a>
             </li>
             <li>
-                <a href="http://consumer.easyxdm.net/example/transport.html">Sending plain string messages using the easyXDM.Transport.BestAvailableTransport class</a>
+                <a href="http://consumer.easyxdm.net/example/transport.html">Sending plain string messages using the easyXDM.Socket class</a>
             </li>
             <li>
                 <a href="http://consumer.easyxdm.net/example/data.html">Sending data (objects)  using the easyXDM.Channel class</a>
