Made some changes to the docs

--- a/tools/ext-doc-1.0.131/template/ext/welcome.html
+++ b/tools/ext-doc-1.0.131/template/ext/welcome.html
@@ -2,41 +2,7 @@
     <div class="col">
         <div id="search">
         </div>
-        easyXDM is a javascript library that uses available techniques to provide a means of transporting messages and/or method calls between windows in different domains. 
-        <br/>
-        This is perfect if you plan to provide a client-side API on your web site as you can expose a method in as little as <a href="http://www.codeproject.com/KB/scripting/easyXDM.aspx">7 lines of code</a>.
-        <br/>
-        <br/>
-        In addition, you dont have to provide a full client library to the consumers, you can just tell them the location of your easyXDM-endpoint, 
-        and then show them the interface they will have to implement - and this can be as small as 1 line for a one-method interface! 
-        <br/>
-        <br/>
-        Demos
-        <ul>
-            <li>
-                <a href="http://consumer.easyxdm.net/example/resize_iframe.html">The essential resize-iframe example</a>
-            </li>
-            <li>
-                <a href="http://consumer.easyxdm.net/example/widgets.html">Managing easyXDM.Widget's using easyXDM.WidgetManager</a>
-            </li>
-            <li>
-                <a href="http://consumer.easyxdm.net/example/transport.html">Sending plain string messages using the easyXDM.Socket class</a>
-            </li>
-            <li>
-                <a href="http://consumer.easyxdm.net/example/data.html">Sending data (objects)  using the easyXDM.Channel class</a>
-            </li>
-            <li>
-                <a href="http://consumer.easyxdm.net/example/methods.html">Exposing and invoking methods using the easyXDM.Interface class</a>
-            </li>
-            <li>
-                <a href="http://consumer.easyxdm.net/example/xhr.html">Calling an ajax method from the remote domain</a>
-            </li>
-            <li>
-                <a href="http://consumer.easyxdm.net/example/index.html">Bridging two web applications</a>
-            </li>
-        </ul>
-		<br/>
-		<br/>
+        easyXDM is a javascript library that uses available techniques to provide a means of transporting messages and/or method calls between windows in different domains. <br/><br/>
 		The library is created and maintained by &Oslash;yvind Sean Kinsey, <a href="http://kinsey.no/blog">http://kinsey.no/blog</a>.
     </div>
     <div class="col-last">
