Fixed the doc template

--- a/tools/ext-doc/template/ext/index.html
+++ b/tools/ext-doc/template/ext/index.html
@@ -1,7 +1,7 @@
 <html lang="en" xmlns:ext="http://extjs.com/docs">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Your Application Documentation</title>
+    <title>easyXDM API Documentation</title>
     <link rel="stylesheet" type="text/css" href="resources/css/ext-all.css" />
     <link rel="stylesheet" type="text/css" href="resources/docs.css" />
 	<link rel="stylesheet" type="text/css" href="resources/style.css" />    
@@ -25,9 +25,15 @@
 	<script type="text/javascript" src="output/tree.js"></script>
 
   <div id="header">
-	<a href="http://extjs.com" style="float:right;margin-right:10px;"><img src="resources/extjs.gif" style="width:83px;height:24px;margin-top:1px;"/></a>
-
-	<div class="api-title">Your Application Documentation</div>
+    <div style="position:absolute;right:100px;top:10px;">
+        <!-- AddThis Button BEGIN -->
+		<a href="http://www.addthis.com/bookmark.php?v=250&pub=xa-4a6cb9890fd71978" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()">
+			<img src="http://s7.addthis.com/static/btn/lg-share-en.gif" width="125" height="16" alt="Bookmark and Share" style="border:0"/>
+		</a>
+        <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=xa-4a6cb9890fd71978"></script>
+        <!-- AddThis Button END -->
+    </div>
+	<div class="api-title">easyXDM API Documentation</div>
   </div>
 
   <div id="classes"></div>
@@ -38,5 +44,22 @@
     <option>Ends with</option>
     <option>Any Match</option>
 </select>
+        <script type="text/javascript">
+            if (location.host.indexOf("easyxdm.net") !== -1) {
+                var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+                document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+            }
+        </script>
+        <script type="text/javascript">
+            if (location.host.indexOf("easyxdm.net") !== -1) {
+                try {
+                    var pageTracker = _gat._getTracker("UA-9535591-3");
+                    pageTracker._setDomainName(".easyxdm.net");
+                    pageTracker._trackPageview();
+                } 
+                catch (err) {
+                }
+            }
+        </script>
   </body>
 </html>
