Some changes to the doc build

--- a/tools/ext-doc/template/ext/index.html
+++ b/tools/ext-doc/template/ext/index.html
@@ -1,7 +1,7 @@
 <html lang="en" xmlns:ext="http://extjs.com/docs">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>easyXDM API Documentation</title>
+    <title>easyXDM API Documentation v%%version%%</title>
     <link rel="stylesheet" type="text/css" href="resources/css/ext-all.css" />
     <link rel="stylesheet" type="text/css" href="resources/docs.css" />
 	<link rel="stylesheet" type="text/css" href="resources/style.css" />    
@@ -33,7 +33,7 @@
         <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js?pub=xa-4a6cb9890fd71978"></script>
         <!-- AddThis Button END -->
     </div>
-	<div class="api-title">easyXDM API Documentation</div>
+	<div class="api-title">easyXDM API Documentation v%%version%%</div>
   </div>
 
   <div id="classes"></div>
