--- a/tools/ext-doc/template/ext/welcome.html
+++ b/tools/ext-doc/template/ext/welcome.html
@@ -1,9 +1,11 @@
 <div id="welcome">
     <div class="col">
-        <div id="search">     	
+        <div id="search">
         </div>
-        easyXDM is a javascript library that uses available techniques to provide a means of transporting messages and/or method calls between windows in different domains. <br/><br/>
-		The library is created and maintained by &Oslash;yvind Sean Kinsey, <a href="http://kinsey.no/blog">http://kinsey.no/blog</a>.
+        easyXDM is a javascript library that uses available techniques to provide a means of transporting messages and/or method calls between windows in different domains. 
+        <br/>
+        <br/>
+        The library is created and maintained by &Oslash;yvind Sean Kinsey, <a href="http://kinsey.no/blog">http://kinsey.no/blog</a>.
     </div>
     <div class="col-last">
         <div class="res-block">
@@ -23,15 +25,31 @@
             <div class="res-block-inner">
                 <h3>Icon Legend</h3>
                 <ul id="legend" style="list-style:none;margin-left:0;">
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-pkg"/>Package</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-cls"/>Class</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-static"/>Singleton</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-cmp"/>Component</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-method"/>Method</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-prop"/>Property</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-config"/>Config Option</li>
-		            <li><img src="resources/images/default/s.gif" class="item-icon icon-event"/>Event</li>
-		        </ul>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-pkg"/>Package
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-cls"/>Class
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-static"/>Singleton
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-cmp"/>Component
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-method"/>Method
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-prop"/>Property
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-config"/>Config Option
+                    </li>
+                    <li>
+                        <img src="resources/images/default/s.gif" class="item-icon icon-event"/>Event
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
